Almost fixed white-spacing issue. Fixed by making display to none inside slideDown2 animation

--- a/ash-website/src/app/experience-info-card/experience-info-card.component.css
+++ b/ash-website/src/app/experience-info-card/experience-info-card.component.css
@@ -3,7 +3,7 @@
    display: block;
    margin: 0px auto;
    float: left;
-   height: 600px;
+   height: 550px;
 }
 
 .experienceTimelineInfoContainer { 
